@@ -1,5 +1,5 @@
 /*
-    Copyright 2001-2016, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2001-2017, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -448,15 +448,25 @@ const wchar_t * const fostlib::exceptions::settings_fault::message() const throw
 fostlib::exceptions::unexpected_eof::unexpected_eof() throw ()
 : exception() {
 }
-fostlib::exceptions::unexpected_eof::unexpected_eof( const string &msg ) throw ()
-: exception( msg ) {
+fostlib::exceptions::unexpected_eof::unexpected_eof(const string &msg) throw ()
+: exception(msg) {
 }
-fostlib::exceptions::unexpected_eof::unexpected_eof( const string &msg, const string &f ) throw ()
-: exception( msg ) {
+fostlib::exceptions::unexpected_eof::unexpected_eof(const string &msg, const string &f) throw ()
+: exception(msg) {
     try {
         insert(data(), "filename", f);
     } catch ( ... ) {
         fostlib::absorb_exception();
+    }
+}
+fostlib::exceptions::unexpected_eof::unexpected_eof(
+    const string &msg, boost::system::error_code error
+) throw ()
+: exception(msg) {
+    try {
+        insert(data(), "error", error);
+    } catch ( ... ) {
+        absorb_exception();
     }
 }
 const wchar_t * const fostlib::exceptions::unexpected_eof::message() const throw () {
