@@ -1,3 +1,6 @@
+2017-03-22  Kirit Saelensminde  <kirit@felspar.com>
+ The `unexpected_eof` error can now take a `boost::system::error_code` for use with socket errors.
+
 2017-03-15  Kirit Saelensminde  <kirit@felspar.com>
  * Improve the way that the JSON atomic type can be constructed from integral types.
  * Allow us to move the underlying string out of a tagged string rvalue.
